unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__mdt/MSA_Implementation_Bracket_Price__mdt.object-meta.xml
<CustomObject>
    <label>MSA Implementation Bracket Price</label>
    <pluralLabel>MSA Implementation Bracket Prices</pluralLabel>
</CustomObject>