unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__mdt/fields/Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price__c</fullName>
    <label>Fixed Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>