unpackaged/main/default/objects/MSA_Implementation_Bracket_Price__mdt/fields/Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound__c</fullName>
    <label>Upper Bound</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>